# react-native-painting-scanner

./: .gitignore  .npmignore  GENERATE_BINDINGS.md  PaintingScannerNativeComponent.js  README.md  SETUP.md  error.txt  index.js  nitro.json  package-lock.json  package.json  quick-test.js  react-native-document-scanner.podspec  react-native-painting-scanner.podspec  test-module.js  tsconfig.json
Example/: App.js  config_output.json  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js  run-android.bat  wait-and-install.bat
Example/android/: build.gradle  gradle.properties  settings.gradle
Example/android/app/: build.gradle  debug.keystore
Example/ios/: Podfile
Example/ios/Example/: AppDelegate.m  Info.plist
Example/ios/Example.xcodeproj/: project.pbxproj
android/: build.gradle
android/openCVLibrary310/: build.gradle
android/src/main/: AndroidManifest.xml
example/: App.tsx  QUICKSTART.md  README.md  SETUP.md  app.config.js  app.json  package-lock.json  package.json  tsconfig.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/assets/: .gitkeep
example/ios/: Podfile
ios/: DocumentScannerView.m  PaintingScanner.h  PaintingScanner.mm  PaintingScannerSpec.h  RNPdfScannerManager.m
ios/PaintingScanner/: CMakeLists.txt  HybridPaintingScanner.swift  IPDFCameraViewController.swift  PaintingScanner.podspec  PaintingScannerModule.swift
screens/: ScannerScreen.js
src/: NativePaintingScanner.ts  PaintingScanner.nitro.ts  index.ts
src/__tests__/: PaintingScanner.test.ts
(+14 files in other folders)
